modified:   program_info/CMakeLists.txt 	modified:   program_info/README.md 	modified:   program_info/genicons.sh 	modified:   program_info/instance_icons.svg 	modified:   program_info/prismlauncher.6.scd 	modified:   program_info/prismlauncher.manifest.in 	modified:   program_info/prismlauncher.qrc 	modified:   program_info/prismlauncher.rc.in

--- a/program_info/prismlauncher.rc.in
+++ b/program_info/prismlauncher.rc.in
@@ -15,10 +15,10 @@ BEGIN
         BEGIN
                 BLOCK "000004b0"
                 BEGIN
-                        VALUE "CompanyName", "MultiMC & Prism Launcher Contributors"
-                        VALUE "FileDescription", "Prism Launcher"
+                        VALUE "CompanyName", "Freesm Launcher Contributors"
+                        VALUE "FileDescription", "Freesm Launcher"
                         VALUE "FileVersion", "@Launcher_VERSION_NAME4@"
-                        VALUE "ProductName", "Prism Launcher"
+                        VALUE "ProductName", "Freesm Launcher"
                         VALUE "ProductVersion", "@Launcher_VERSION_NAME4@"
                 END
         END
