renamed:    program_info/prismlauncher-monochrome.Source.svg -> program_info/freesmlauncher-monochrome.Source.svg 	renamed:    program_info/prismlauncher.icns -> program_info/freesmlauncher.icns 	renamed:    program_info/prismlauncher.ico -> program_info/freesmlauncher.ico 	renamed:    program_info/prismlauncher.rc.in -> program_info/freesmlauncher.in 	renamed:    program_info/prismlauncher.manifest.in -> program_info/freesmlauncher.manifest.in 	renamed:    program_info/prismlauncher.qrc -> program_info/freesmlauncher.qrc 	renamed:    program_info/prismlauncher.6.scd -> program_info/freesmlauncher.scd 	renamed:    program_info/org.prismlauncher.PrismLauncher.Social.svg -> program_info/org.freesmlauncher.FreesmLauncher.Social.svg 	renamed:    program_info/org.prismlauncher.PrismLauncher.Source.svg -> program_info/org.freesmlauncher.FreesmLauncher.Source.svg 	renamed:    program_info/org.prismlauncher.PrismLauncher.bigsur.svg -> program_info/org.freesmlauncher.FreesmLauncher.bigsur.svg 	renamed:    program_info/org.prismlauncher.PrismLauncher.desktop.in -> program_info/org.freesmlauncher.FreesmLauncher.desktop.in 	renamed:    program_info/org.prismlauncher.PrismLauncher.logo-darkmode.svg -> program_info/org.freesmlauncher.FreesmLauncher.logo-darkmode.svg 	renamed:    program_info/org.prismlauncher.PrismLauncher.logo.source.svg -> program_info/org.freesmlauncher.FreesmLauncher.logo.source.svg 	renamed:    program_info/org.prismlauncher.PrismLauncher.logo.svg -> program_info/org.freesmlauncher.FreesmLauncher.logo.svg 	renamed:    program_info/org.prismlauncher.PrismLauncher.metainfo.xml.in -> program_info/org.freesmlauncher.FreesmLauncher.metainfo.xml.in 	renamed:    program_info/org.prismlauncher.PrismLauncher.svg -> program_info/org.freesmlauncher.FreesmLauncher.svg 	modified:   program_info/win_install.nsi.in

--- a/program_info/win_install.nsi.in
+++ b/program_info/win_install.nsi.in
@@ -368,9 +368,9 @@ Section "@Launcher_DisplayName@"
   WriteRegStr HKCU Software\Classes\curseforge "URL Protocol" ""
   WriteRegStr HKCU Software\Classes\curseforge\shell\open\command "" '"$INSTDIR\@Launcher_APP_BINARY_NAME@.exe" "%1"'
 
-; Write the URL Handler into registry for prismlauncher
-  WriteRegStr HKCU Software\Classes\prismlauncher "URL Protocol" ""
-  WriteRegStr HKCU Software\Classes\prismlauncher\shell\open\command "" '"$INSTDIR\@Launcher_APP_BINARY_NAME@.exe" "%1"'
+; Write the URL Handler into registry for freesmlauncher
+  WriteRegStr HKCU Software\Classes\freesmlauncher "URL Protocol" ""
+  WriteRegStr HKCU Software\Classes\freesmlauncher\shell\open\command "" '"$INSTDIR\@Launcher_APP_BINARY_NAME@.exe" "%1"'
 
   ; Write the uninstall keys for Windows
   ${GetParameters} $R0
