--- a/program_info/org.freesmlauncher.FreesmLauncher.metainfo.xml.in
+++ b/program_info/org.freesmlauncher.FreesmLauncher.metainfo.xml.in
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-  <id>org.prismlauncher.PrismLauncher</id>
-  <launchable type="desktop-id">org.prismlauncher.PrismLauncher.desktop</launchable>
-  <name>Prism Launcher</name>
-  <developer_name>Prism Launcher Contributors</developer_name>
+  <id>org.freesmlaucnher.FreesmLauncher</id>
+  <launchable type="desktop-id">org.freesmlauncher.FreesmLauncher.desktop</launchable>
+  <name>Freesm Launcher</name>
+  <developer_name>Freesm Launcher Contributors</developer_name>
   <summary>A custom launcher for Minecraft that allows you to easily manage multiple installations of Minecraft at once</summary>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-only</project_license>
-  <url type="homepage">https://prismlauncher.org/</url>
-  <url type="help">https://prismlauncher.org/wiki/</url>
-  <url type="bugtracker">https://github.com/PrismLauncher/PrismLauncher/issues</url>
-  <url type="contact">https://prismlauncher.org/discord</url>
-  <url type="vcs-browser">https://github.com/PrismLauncher/PrismLauncher</url>
-  <url type="contribute">https://github.com/PrismLauncher/PrismLauncher/blob/develop/CONTRIBUTING.md</url>
+  <url type="homepage">https://github.com/FreesmTeam/FreesmLauncher</url>
+  <url type="help">https://github.com/FreesmTeam/FreesmLauncher</url>
+  <url type="bugtracker">https://github.com/FreesmTeam/FreesmLauncher/issues</url>
+  <url type="contact">https://github.com/FreesmTeam/FreesmLauncher/</url>
+  <url type="vcs-browser">https://github.com/FreesmTeam/FreesmLauncher</url>
+  <url type="contribute">https://github.com/FreesmTeam/FreesmLauncher/blob/develop/CONTRIBUTING.md</url>
   <url type="translate">https://hosted.weblate.org/projects/prismlauncher/launcher</url>
   <description>
-    <p>Prism Launcher is a custom launcher for Minecraft that focuses on predictability, long term stability and simplicity.</p>
+    <p>Freesm Launcher is a custom launcher for Minecraft that focuses on predictability, long term stability and simplicity.</p>
     <p>Features:</p>
     <ul>
       <li>Easily install game modifications, such as Fabric, Forge and Quilt</li>
@@ -27,12 +27,13 @@
       <li>Isolate Minecraft instances to keep everything clean</li>
       <li>Install and update mods directly from the launcher</li>
       <li>Customize the launcher with themes, and more</li>
+      <li>No DRM: play free, play now</li>
       <li>And cat :3</li>
     </ul>
   </description>
   <screenshots>
     <screenshot type="default">
-      <caption>The main Prism Launcher window</caption>
+      <caption>The main Freesm Launcher window</caption>
       <image type="source" width="1030" height="764">https://prismlauncher.org/img/screenshots/LauncherDark.png</image>
     </screenshot>
     <screenshot>
