--- a/cmake/MacOSXBundleInfo.plist.in
+++ b/cmake/MacOSXBundleInfo.plist.in
@@ -7,7 +7,7 @@
     <key>NSMicrophoneUsageDescription</key>
     <string>A Minecraft mod wants to access your microphone.</string>
     <key>NSDownloadsFolderUsageDescription</key>
-    <string>Prism uses access to your Downloads folder to help you more quickly add mods that can't be automatically downloaded to your instance. You can change where Prism scans for downloaded mods in Settings or the prompt that appears.</string>
+    <string>Freesm uses access to your Downloads folder to help you more quickly add mods that can't be automatically downloaded to your instance. You can change where Freesm scans for downloaded mods in Settings or the prompt that appears.</string>
     <key>NSPrincipalClass</key>
     <string>NSApplication</string>
     <key>NSHighResolutionCapable</key>
@@ -55,7 +55,7 @@
                 <string>mrpack</string>
             </array>
             <key>CFBundleTypeName</key>
-            <string>Prism Launcher instance</string>
+            <string>Freesm Launcher instance</string>
             <key>CFBundleTypeOSTypes</key>
             <array>
                 <string>TEXT</string>
@@ -81,10 +81,10 @@
         </dict>
         <dict>
             <key>CFBundleURLName</key>
-            <string>Prismlauncher</string>
+            <string>Freesmlauncher</string>
             <key>CFBundleURLSchemes</key>
             <array>
-            <string>prismlauncher</string>
+            <string>Freesmlauncher</string>
             </array>
         </dict>
     </array>
