--- a/program_info/CMakeLists.txt
+++ b/program_info/CMakeLists.txt
@@ -21,13 +21,13 @@ set(Launcher_Domain "https://github.com/FreesmTeam/FreesmLauncher" PARENT_SCOPE)
 set(Launcher_UserAgent "${Launcher_CommonName}/${Launcher_VERSION_NAME}" PARENT_SCOPE)
 set(Launcher_ConfigFile "freesmlauncher.cfg" PARENT_SCOPE)
 set(Launcher_Git "https://github.com/FreesmTeam/FreesmLauncher" PARENT_SCOPE)
-set(Launcher_DesktopFileName "org.freesmlauncher.FreesmLauncher.desktop" PARENT_SCOPE)
-set(Launcher_SVGFileName "org.freesmLauncher.FreesmLauncher.svg" PARENT_SCOPE)
+set(Launcher_DesktopFileName "org.freesmTeam.FreesmLauncher.desktop" PARENT_SCOPE)
+set(Launcher_SVGFileName "org.freesmTeam.FreesmLauncher.svg" PARENT_SCOPE)
 
-set(Launcher_Desktop "program_info/org.freesmlauncher.FreesmLauncher.desktop" PARENT_SCOPE)
+set(Launcher_Desktop "program_info/org.freesmTeam.FreesmLauncher.desktop" PARENT_SCOPE)
 set(Launcher_mrpack_MIMEInfo "program_info/modrinth-mrpack-mime.xml" PARENT_SCOPE)
-set(Launcher_MetaInfo "program_info/org.freesmlauncher.FreesmLauncher.metainfo.xml" PARENT_SCOPE)
-set(Launcher_SVG "program_info/org.freesmlauncher.FreesmLauncher.svg" PARENT_SCOPE)
+set(Launcher_MetaInfo "program_info/org.freesmTeam.FreesmLauncher.metainfo.xml" PARENT_SCOPE)
+set(Launcher_SVG "program_info/org.freesmTeam.FreesmLauncher.svg" PARENT_SCOPE)
 set(Launcher_Branding_ICNS "program_info/freesmlauncher.icns" PARENT_SCOPE)
 set(Launcher_Branding_ICO "program_info/freesmlauncher.ico")
 set(Launcher_Branding_ICO "${Launcher_Branding_ICO}" PARENT_SCOPE)
