--- a/program_info/org.freesmTeam.freesmlauncher.metainfo.xml.in
+++ b/program_info/org.freesmTeam.freesmlauncher.metainfo.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-  <id>org.freesmlaucnher.FreesmLauncher</id>
+  <id>org.freesmTeam.freesmlauncher</id>
   <launchable type="desktop-id">org.freesmTeam.freesmlauncher.desktop</launchable>
   <name>Freesm Launcher</name>
   <developer_name>Freesm Launcher Contributors</developer_name>
