build: edit trigger_builds to not build if docs/ are updated trigger_builds.yml

--- a/.github/workflows/trigger_builds.yml
+++ b/.github/workflows/trigger_builds.yml
@@ -5,6 +5,7 @@ on:
     branches-ignore:
       - "renovate/**"
     paths-ignore:
+      - "docs/**"
       - "**.md"
       - "**/LICENSE"
       - "flake.lock"
@@ -13,6 +14,7 @@ on:
       - ".markdownlint**"
   pull_request:
     paths-ignore:
+      - "docs/**"
       - "**.md"
       - "**/LICENSE"
       - "flake.lock"
