--- a/program_info/org.freesmTeam.freesmlauncher.desktop.in
+++ b/program_info/org.freesmTeam.freesmlauncher.desktop.in
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Version=1.0
-Name=@Launcher_DisplayName@
+Name=Freesm Launcher
 Comment=Discover, manage, and play Minecraft instances
 Type=Application
 Terminal=false
 Exec=@Launcher_APP_BINARY_NAME@ %U
 StartupNotify=true
-Icon=org.@Launcher_APP_BINARY_NAME@.@Launcher_CommonName@
+Icon=org.freesmTeam.freesmlauncher
 Categories=Game;ActionGame;AdventureGame;Simulation;
 Keywords=game;minecraft;mc;
-StartupWMClass=@Launcher_CommonName@
+StartupWMClass=PrismLauncher
 MimeType=application/zip;application/x-modrinth-modpack+zip;x-scheme-handler/curseforge;x-scheme-handler/@Launcher_APP_BINARY_NAME@;
