feat!: add FreesmTheme

--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -816,6 +816,8 @@ SET(LAUNCHER_SOURCES
     # GUI - themes
     ui/themes/FusionTheme.cpp
     ui/themes/FusionTheme.h
+    ui/themes/FreesmTheme.cpp
+    ui/themes/FreesmTheme.h
     ui/themes/BrightTheme.cpp
     ui/themes/BrightTheme.h
     ui/themes/CustomTheme.cpp
