--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Prism Launcher Matrix Support Room
-    url: https://matrix.to/#/#prism-support:matrix.org
+  - name: Official Freesm Telegram Channel
+    url: https://freesm.t.me
     about: Please ask for support here before opening an issue.
