--- a/buildconfig/BuildConfig.cpp.in
+++ b/buildconfig/BuildConfig.cpp.in
@@ -58,8 +58,6 @@ Config::Config()
     // Version information
     VERSION_MAJOR = @Launcher_VERSION_MAJOR@;
     VERSION_MINOR = @Launcher_VERSION_MINOR@;
-    VERSION_PATCH = @Launcher_VERSION_PATCH@;
-    VERSION_CODENAME = "@Launcher_VERSION_CODENAME@";
 
     BUILD_PLATFORM = "@Launcher_BUILD_PLATFORM@";
     BUILD_ARTIFACT = "@Launcher_BUILD_ARTIFACT@";
@@ -104,7 +102,7 @@ Config::Config()
     if (GIT_REFSPEC.startsWith("refs/heads/"))
     {
         VERSION_CHANNEL = GIT_REFSPEC;
-        VERSION_CHANNEL.remove("refs/heads/");
+        VERSION_CHANNEL.remove("refs/heads/"); 
     }
     else if (!GIT_COMMIT.isEmpty())
     {
@@ -138,7 +136,7 @@ Config::Config()
 
 QString Config::versionString() const
 {
-    return QString("%1 %2.%3.%4").arg(VERSION_CODENAME).arg(VERSION_MAJOR).arg(VERSION_MINOR).arg(VERSION_PATCH);
+    return QString("%1.%2").arg(VERSION_MAJOR).arg(VERSION_MINOR);
 }
 
 QString Config::printableVersionString() const
