ci: update version variables for windows
Signed-off-by: windstone <notwindstone@gmail.com>

--- a/program_info/win_install.nsi.in
+++ b/program_info/win_install.nsi.in
@@ -406,9 +406,9 @@ Section "@Launcher_DisplayName@"
     WriteRegStr HKCU "${UNINST_KEY}" "UninstallString" '"$INSTDIR\uninstall.exe" _?=$INSTDIR'
     WriteRegStr HKCU "${UNINST_KEY}" "QuietUninstallString" '"$INSTDIR\uninstall.exe" /S _?=$INSTDIR'
     WriteRegStr HKCU "${UNINST_KEY}" "InstallLocation" "$INSTDIR"
-    WriteRegStr HKCU "${UNINST_KEY}" "Publisher" "@Launcher_DisplayName@ Contributors"
-    WriteRegStr HKCU "${UNINST_KEY}" "Version" "@Launcher_VERSION_NAME4@"
-    WriteRegStr HKCU "${UNINST_KEY}" "DisplayVersion" "@Launcher_VERSION_NAME@"
+    WriteRegStr HKCU "${UNINST_KEY}" "Publisher" "@Launcher_DisplayName@"
+    WriteRegStr HKCU "${UNINST_KEY}" "Version" "@Launcher_VERSION_NAME4_WINDOWS@"
+    WriteRegStr HKCU "${UNINST_KEY}" "DisplayVersion" "@Launcher_VERSION_NAME_WINDOWS@"
     WriteRegStr HKCU "${UNINST_KEY}" "VersionMajor" "@Launcher_VERSION_MAJOR@"
     WriteRegStr HKCU "${UNINST_KEY}" "VersionMinor" "@Launcher_VERSION_MINOR@"
     ${GetSize} "$INSTDIR" "/S=0K" $0 $1 $2
