ci: update version variables for windows builds
Signed-off-by: windstone <notwindstone@gmail.com>

--- a/program_info/freesmlauncher.rc.in
+++ b/program_info/freesmlauncher.rc.in
@@ -15,11 +15,11 @@ BEGIN
         BEGIN
                 BLOCK "000004b0"
                 BEGIN
-                        VALUE "CompanyName", "Freesm Launcher Contributors"
+                        VALUE "CompanyName", "Freesm Launcher"
                         VALUE "FileDescription", "Freesm Launcher"
-                        VALUE "FileVersion", "@Launcher_VERSION_NAME4@"
+                        VALUE "FileVersion", "@Launcher_VERSION_NAME4_WINDOWS@"
                         VALUE "ProductName", "Freesm Launcher"
-                        VALUE "ProductVersion", "@Launcher_VERSION_NAME4@"
+                        VALUE "ProductVersion", "@Launcher_VERSION_NAME4_WINDOWS@"
                 END
         END
         BLOCK "VarFileInfo"
